force-app/main/default/objects/Ledger__c/fields/Accumulated_Balance__c.field-meta.xml
<CustomField>
    <fullName>Accumulated_Balance__c</fullName>
    <label>Accumulated Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>