force-app/main/default/objects/Ledger__c/fields/Amount_in_local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_local_Currency__c</fullName>
    <label>Amount in local Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>