force-app/main/default/objects/Ledger__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <label>Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>