force-app/main/default/objects/Ledger__c/fields/BillingDoc__c.field-meta.xml
<CustomField>
    <fullName>BillingDoc__c</fullName>
    <label>BillingDoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>