force-app/main/default/objects/Ledger__c/fields/Clearing_Document__c.field-meta.xml
<CustomField>
    <fullName>Clearing_Document__c</fullName>
    <label>Clearing Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>