force-app/main/default/objects/Ledger__c/fields/Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note__c</fullName>
    <formula>IF(
    NOT(ISBLANK( Amount_in_local_Currency__c )),
    IF(
         Amount_in_local_Currency__c  &gt;= 0,
         Amount_in_local_Currency__c ,
        null
    ),
    null
)</formula>
    <label>Credit Note</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>