force-app/main/default/objects/Ledger__c/fields/Debit_Note__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note__c</fullName>
    <formula>IF(
    NOT(ISBLANK( Amount_in_local_Currency__c )),
    IF(
        Amount_in_local_Currency__c &lt; 0,
        ABS(Amount_in_local_Currency__c),
        null
    ),
    null
)</formula>
    <label>Debit Note</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>