force-app/main/default/objects/Ledger__c/fields/Description_Narration__c.field-meta.xml
<CustomField>
    <fullName>Description_Narration__c</fullName>
    <label>Description(Narration)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>