force-app/main/default/objects/Ledger__c/fields/Invoice_Dr_Cr_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Dr_Cr_Number__c</fullName>
    <label>Invoice/Dr/Cr Number)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>