force-app/main/default/objects/Ledger__c/fields/NetDueDateSymbol__c.field-meta.xml
<CustomField>
    <fullName>NetDueDateSymbol__c</fullName>
    <label>NetDueDateSymbol</label>
    <type>Date</type>
</CustomField>