force-app/main/default/objects/Ledger__c/fields/Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Posting_Date__c</fullName>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>