force-app/main/default/objects/Ledger__c/fields/Sales_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organisation__c</fullName>
    <label>Sales Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>