force-app/main/default/objects/Ledger__c/fields/Special_G_L_Ind__c.field-meta.xml
<CustomField>
    <fullName>Special_G_L_Ind__c</fullName>
    <label>Special G/L Ind.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>