force-app/main/default/objects/Ledger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assignment__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_Date__c</columns>
    <columns>Special_G_L_Ind__c</columns>
    <columns>Amount_in_local_Currency__c</columns>
    <columns>Local_Currency__c</columns>
    <columns>Clearing_Document__c</columns>
    <columns>Text__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>