force-app/main/default/objects/Ledger__c/listViews/New_Ledger_view.listView-meta.xml
<ListView>
    <fullName>New_Ledger_view</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>New  Ledger view</label>
</ListView>